<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Battleship</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next_turn_">Next turn</string>
    <string name="welcome">Welcome to Battleship!  This is network-only, so you&amp;apos;ll need to log in to play!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Select Fire Coordinates</string>
    <string name="quick_match">Quick match</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to Battleship!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn Count: </string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>

    <string-array name="nav_drawer_groups">
        <item>Game</item>
        <item>Info</item>
    </string-array>

    <string-array name="game">
        <item>Home</item>
        <item>Your Ships</item>
        <item>Radar</item>
    </string-array>

    <array name="game_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>


    <string-array name="info">
        <item>Stats</item>
        <item>Preferences</item>
    </string-array>

    <array name="info_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!--Strings for BaseGameUtils-->
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>

    <!--GameHelper Strings-->
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>

</resources>
