<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible" >

        <!-- sign-in button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/welcome_to_our_skeleton_app_"
            android:textAppearance="@style/GuessWordText" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content" >
        </com.google.android.gms.common.SignInButton>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/gameplay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible"
        tools:context=".SkeletonActivity" >

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:gravity="center"
            android:text="@string/match_instructions"
            android:textAppearance="@style/HelpText"
            android:width="300dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/turn_counter_view"
            android:layout_alignStart="@+id/turn_counter_view"
            android:layout_marginTop="54dp" />

        <TextView
            android:id="@+id/turn_counter_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:gravity="center"
            android:text="@string/turn_counter"
            android:textAppearance="@style/GuessWordText"
            android:width="300dp"
            android:layout_below="@+id/instructions"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/data_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:inputType="textEmailAddress|textEmailSubject"
            android:maxLines="1"
            android:text="@string/hello_world"
            android:textAppearance="@style/GuessWordText"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/instructions"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/relativeLayout">

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alpha" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numeric"
                android:layout_toRightOf="@+id/alpha" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="54dp">

            <Button
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDoneClicked"
                android:text="@string/done"
                android:textAppearance="@style/HelpText.Heading"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancelClicked"
                android:text="@string/cancel"
                android:textAppearance="@style/HelpText.Heading"
                android:layout_toRightOf="@+id/doneButton" />

            <Button
                android:id="@+id/leaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onLeaveClicked"
                android:text="@string/leave"
                android:textAppearance="@style/HelpText.Heading"
                android:layout_toRightOf="@+id/cancelButton" />

            <Button
                android:id="@+id/finishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onFinishClicked"
                android:text="@string/finish"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle"
                android:layout_below="@+id/cancelButton"
                android:layout_alignStart="@+id/cancelButton" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/matchup_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".SkeletonActivity" >

        <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".SkeletonActivity"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:text=""
                android:textAppearance="@style/HelpText.Caption" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />

            <Button
                android:id="@+id/startMatchButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onStartMatchClicked"
                android:text="@string/start_match" />

            <Button
                android:id="@+id/checkGamesButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onCheckGamesClicked"
                android:text="@string/check_games" />

            <Button
                android:id="@+id/quickMatchButon"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="onQuickMatchClicked"
                android:text="@string/quick_match" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>